Fixed rendering bug that caused the cell contents to be slightyly off-center

--- a/css/Table.scss
+++ b/css/Table.scss
@@ -25,8 +25,7 @@ table{
       margin: 0 auto;
       
       & > div {
-        white-space: nowrap;
-        display: table-row;
+        display: block;
       }
     }
 
@@ -90,7 +89,6 @@ table{
       font-weight: bold;
       letter-spacing: -.4em;
       transform: translateX(-.2em);
-
     }
     & .romanji, & .pronunciation{
       font-size: 50%;
